@@ -2,6 +2,15 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2011-12-14	remko
+	* PSL_prologue.ps:	Introduced /PSL_transp to deal with transparency, supported
+				both by Adobe Illustrator and ghostscript.
+	* pslib.c, gmt_plot.c:	==="===
+	* psldemo.c:		Added transparency example
+
+2011-12-03	pwessel
+	* gmtmath.c:		Did not ceck that -Tmin/max has min >= max.
+	
 2011-12-03	pwessel
 	* mgd77/mgd77track.c:	Did not set GMT's time system to Unix before dealing
 				with dates.  Now done centrally by MGD77_Init.
